Changelog for quasiTelegramPoster.

quasiTelegramPoster 1.0.0 pl
==============
* Initial commit.