@@ -1,6 +1,6 @@
 The MIT License (MIT)
 
-Copyright (c) 2017 quasi-art.ru
+Copyright (c) 2018 quasi-art.ru
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
