@@ -1,5 +1,10 @@
 Changelog for quasiTelegramPoster.
 
+quasiTelegramPoster 1.0.1 pl
+==============
+* Small refactoring.
+* OnResourceAutoPublish now works.
+
 quasiTelegramPoster 1.0.0 pl
 ==============
 * Initial commit.
